Add Frontend/dist and app.py to repo for Docker deployment

--- a/Frontend/.gitignore
+++ b/Frontend/.gitignore
@@ -8,8 +8,8 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
-dist
-dist-ssr
+# dist - REMOVED: we need dist in the repo for Docker deployment
+# dist-ssr
 *.local
 
 # Editor directories and files
