Fix: Correct parser type for Alloc, Famille and Pop_Inf3ans to tabular

--- a/Backend/themes_config.json
+++ b/Backend/themes_config.json
@@ -611,7 +611,10 @@
           "type": "variable",
           "label": "Personnes couvertes par prestation CNAF",
           "csvPattern": "Nb_Alloc",
-          "parser": "moca"
+          "parser": "tabular",
+          "yearColumn": 0,
+          "geoColumn": 2,
+          "column": 3
         },
         {
           "id": "nb_menages",
